# weboql

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  Taskfile.testql.yml  Taskfile.yml  app.doql.css  app.doql.less  goal.yaml  openapi.json  openapi.yaml  pyproject.toml  pyqual.yaml  sumd.json
docs/: README.md
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
testql-scenarios/: cross-project-integration.testql.toon.yaml  generated-api-smoke.testql.toon.yaml
tests/: README.md  e2e.sh  e2e.yaml  test-hardware-cli.sh  test_schema_api.py  test_weboql.py
tests/testql-scenarios/: generated-api-smoke.testql.toon.yaml
weboql/: __init__.py  main.py
weboql/api/: __init__.py  editor.py  plugins_api.py  schema.py
weboql/api/static/: dsl-client.html  editor.html
