[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weboql"
version = "0.1.0"
description = "WebOQL — Web-based OQL scenario editor and executor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "pydantic>=2.0",
    "oqlos>=0.1.0",
]

[project.scripts]
weboql-server = "weboql.main:run"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
include = ["weboql*"]
