[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weboql"
version = "0.1.2"
description = "WebOQL — Web-based OQL scenario editor and executor"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "pydantic>=2.0",
    "oqlos>=0.1.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "testql>=0.2.0",
]

[project.scripts]
weboql-server = "weboql.main:run"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[tool.setuptools.packages.find]
include = ["weboql*"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
